# CatWareEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CatWareEngine.sln  binds.cfg  clean.bat  imgui.ini  readme.md  xmake.lua
.github/workflows/: cmake-multi-platform.yml
Docs/: 1. Making a basic application.md  3. Loading and drawing textures.md  4. Entities.md  Doxyfile  Making a basic application.md
Docs/Tutorials/: 0. Creating a project.md  1. Making a basic application.md  2. Window parameters.md  4. Entities.md  5. Getting input.md  6. Audio.md  7. Text rendering.md  README.md
Editor/: Editor.vcxproj
Editor/Source/: EditorViewport.cpp  EditorViewport.h  Main.cpp
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/Lib/Glad/include/glad/: glad.h
Engine/Lib/Glad/src/: glad.c
Engine/Source/: CatWare.h  Core.h
Engine/Source/CatWare/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h  Error.cpp  Error.h  Events.cpp  Events.h  Log.cpp  Log.h  Particles.cpp  Particles.h  Profiling.cpp  Profiling.h  Random.cpp  Random.h  Scene.cpp  Scene.h  ScriptInterface.h  Time.cpp  Time.h  World.cpp  World.h
Engine/Source/CatWare/Assets/: Asset.cpp  AssetTypes.h  Assets.h  TextureAsset.cpp  TextureAsset.h
Engine/Source/CatWare/Audio/: Audio.cpp  Audio.cpp.bak  Audio.h
Engine/Source/CatWare/Debug/: Commands.cpp  Commands.h  Console.cpp  Console.h  Debug.h  DebugAssert.cpp  DebugAssert.h  DebugUI.cpp  DebugUI.h  MemTracker.cpp  MemTracker.h
Engine/Source/CatWare/Entity/: Components.cpp  Components.h  Entity.cpp  Entity.h
Engine/Source/CatWare/Filesystem/: Filesystem.cpp  Filesystem.h  Sources.cpp  Sources.h
Engine/Source/CatWare/GameState/: Scene.cpp  Scene.h  World.cpp  World.h
Engine/Source/CatWare/Graphics/: Camera.cpp  Camera.h  Text.cpp  Text.h  Window.cpp  Window.h
Engine/Source/CatWare/Graphics/Animation/: Animation.cpp  Animation.h
Engine/Source/CatWare/Graphics/Renderer/: Buffer.cpp  Buffer.h  Context.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/Source/CatWare/Graphics/Renderer/OpenGL/: Context.cpp  Context.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
Engine/Source/CatWare/Input/: Binds.cpp  Binds.h  KeyboardAndMouse.cpp  KeyboardAndMouse.h
Engine/Source/CatWare/Physics/: Collision.cpp  Collision.h  CollisionResponse.h  Physics.cpp  Physics.h
Engine/Source/CatWare/Resource/: TextureResource.cpp  TextureResource.h
Engine/Source/CatWare/Types/: Color.h  Transform.h  Vector.h
Engine/Source/CatWare/UI/: Widgets.cpp  Widgets.h
Engine/Source/CatWare/Utils/: Color.h  Log.cpp  Log.h  Time.cpp  Time.h  Transform.h  Types.h  Vector.h
EngineRes/Shaders/: RectShaderFragment.glsl  RectShaderVertex.glsl  RectTexturedFragment.glsl  RectTexturedVertex.glsl  TextFragment.glsl  TextVertex.glsl
Runtime/Source/: Main.cpp  Script.cpp  Script.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/Source/: Main.cpp
TestScript/Source/: Main.cpp
WorkDir/: anim.txt  imgui.ini  testMap.yaml
WorkDir/EngineRes/Shaders/: PostProcessFragment.glsl  PostProcessVertex.glsl  RectFragment.glsl  RectTexturedFragment.glsl  RectTexturedVertex.glsl  RectVertex.glsl  TextVertex.glsl
third-party notices/: README.txt
